# rust-axum-example

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  docker-compose.yml  tailwind.config.cjs
.cargo/: config.toml
assets/: main.css
prisma/: schema.prisma
prisma-cli/: Cargo.toml
src/: errors.rs  main.rs  state.rs  template.rs  types.rs
src/routes/: auth.rs
styles/: tailwind.css
templates/components/: account_logged_in.html  account_logged_out.html  gpg_key.html  login_form.html  nav.html  profile_login.html  signup_form.html
templates/layouts/: base.html  head.html
templates/pages/: error.html  home.html  login.html  settings.html  signup.html
