[package]
name = "cryptcase"
version = "0.1.0"
edition = "2021"


[workspace]
members = [".", "prisma-cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

thiserror = "1.0"
axum = "0.6"
axum-extra = {version = "0.8", features = ["cookie", ]}
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.4", features = ["fs", "trace"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
dotenvy = "0.15"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.10", default-features = false, features = ["postgresql"] }
serde = "1.0"
argon2 = "0.5"
tower-cookies = "0.9"
axum_session = { version = "0.6", default-features = false, features = [ "redis-db" ] }
redis_pool = "0.2"
redis = { version = "0.23" }
axum-htmx = "0.3.1"
handlebars = { version = "4.4", features = ["dir_source"] }
validator = { version = "0", features = ["derive"] }
serde_json = "1.0"
derive_builder = "0.12.0"
